add markers with single characters to map